fixed another overflow bug in Intersts heading

--- a/style.css
+++ b/style.css
@@ -218,6 +218,8 @@ section {
 	padding: 3rem 6rem;
 	width: 50%;
 	text-align: center;
+	max-width: 100%;
+	min-width: 10%
 }
 
 
@@ -235,6 +237,8 @@ section {
 	width: 50%;
 	height: 50%;
 	text-align: center;
+	max-width: 100%;
+	min-width: 10%
 }
 
 #Last_Heading {
